# EnvCheck

./: AGENTS.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/qpdb/env/check/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gpu.conf  proxy.sh
app/src/main/assets/fingerprint/: fingerprint.html  fingerprint.js
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/gpu/: vulkan_info.cpp
app/src/main/cpp/jni/: apatch_detection.cpp  file_util.cpp  ksu_detection.cpp  property_util.cpp  soc_detection.cpp  susfs_detection.cpp  xplike_detection.cpp  zygisk_next_detection.cpp
app/src/main/cpp/properties/: property_info.cpp  property_info.h  system_properties.cpp  system_properties.h
app/src/main/cpp/utils/: time_util.h
app/src/main/java/qpdb/env/check/: BehavioraActivity.kt  EnvCheckApp.kt  MainActivity.kt
app/src/main/java/qpdb/env/check/adapter/: CategoryAdapter.kt
app/src/main/java/qpdb/env/check/checkers/: APatchChecker.kt  BatteryChecker.kt  BootloaderLockChecker.kt  CameraChecker.kt  DeveloperChecker.kt  GpuChecker.kt  InputDeviceChecker.kt  KernelInfoChecker.kt  KernelSUChecker.kt  NetworkChecker.kt  SensorChecker.kt  SimCardChecker.kt  SoCChecker.kt  SusfsChecker.kt  (+3 more)
app/src/main/res/drawable/: progress_bar_color.xml  slide_thumb_background.xml  slide_track_background.xml  status_failed.xml
app/src/main/res/layout/: activity_behaviora.xml  activity_main.xml  bottom_sheet_date_picker.xml  dialog_slide_verify.xml  fragment_behavior_display.xml  fragment_contact_input.xml  fragment_input_nickname.xml  fragment_input_password.xml  fragment_registration_success.xml  fragment_select_birthday.xml  fragment_user_agreement.xml  fragment_verify_code.xml  fragment_welcome.xml  item_category.xml  item_check.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/qpdb/env/check/: ExampleUnitTest.kt
doc/: SUSFS_Detection_Report.md  detection_surface.md  ksu_侧信道检测.md  root_detection_attack_surface.md  supercall_key_length_timing_sidechannel.md  timing_detection_schemes_analysis.md  xplike-detection.md  zygisk-next.md  zygote_timing_analysis.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+47 files in other folders)
